feat: gallery page guest banner

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 @import "./_tables.css";
 @import "./_carousel.css";
 @import "./_collection.css";
+@import "./_gallery.css";
 
 @tailwind base;
 @tailwind components;
