--- a/resources/css/_cookies_modal.css
+++ b/resources/css/_cookies_modal.css
@@ -5,15 +5,15 @@
 body {
     --cc-bg: #fff;
     --cc-text: #112954;
-    --cc-btn-primary-bg: theme("colors.theme-hint-700");
+    --cc-btn-primary-bg: theme("colors.theme-primary-700");
     --cc-btn-primary-text: var(--cc-bg);
     --cc-font-family: theme("fontFamily.sans");
-    --cc-btn-primary-hover-bg: theme("colors.theme-hint-800");
+    --cc-btn-primary-hover-bg: theme("colors.theme-primary-800");
     --cc-btn-secondary-bg: theme("colors.theme-secondary-100");
-    --cc-btn-secondary-text: theme("colors.theme-hint-900");
+    --cc-btn-secondary-text: theme("colors.theme-primary-900");
     --cc-btn-secondary-hover-bg: theme("colors.theme-secondary-200");
     --cc-toggle-bg-off: theme("colors.theme-secondary-500");
-    --cc-toggle-bg-on: theme("colors.theme-hint-700");
+    --cc-toggle-bg-on: theme("colors.theme-primary-700");
     --cc-toggle-bg-readonly: theme("colors.theme-secondary-300");
     --cc-toggle-knob-bg: #fff;
     --cc-toggle-knob-icon-color: theme("colors.theme-secondary-300");
@@ -24,7 +24,7 @@ body {
     --cc-cookie-table-border: theme("colors.theme-secondary-300");
     --cc-overlay-bg: theme("colors.theme-secondary-900 / 50%");
     --cc-webkit-scrollbar-bg: theme("colors.theme-secondary-50");
-    --cc-webkit-scrollbar-bg-hover: theme("colors.theme-hint-700");
+    --cc-webkit-scrollbar-bg-hover: theme("colors.theme-primary-700");
 }
 
 body .cc_div .c-bn {
