--- a/resources/css/_buttons.css
+++ b/resources/css/_buttons.css
@@ -1,7 +1,7 @@
 @layer components {
     .button-primary,
     .button-icon-primary {
-        @apply transition-default inline-flex items-center rounded-3xl bg-theme-primary-600 px-5 py-2 font-medium text-white outline-none outline-3 outline-offset-0 hover:bg-theme-primary-700 focus-visible:bg-theme-primary-600 focus-visible:outline-theme-primary-300 active:bg-theme-primary-800;
+        @apply transition-default inline-flex items-center rounded-3xl bg-theme-primary-600 px-5 py-2 font-medium text-white outline-none outline-3 outline-offset-0 hover:bg-theme-primary-700 focus-visible:bg-theme-primary-600 focus-visible:outline-theme-primary-300 active:bg-theme-primary-800 dark:bg-theme-primary-600 dark:text-white dark:border-theme-primary-600 dark:hover:bg-theme-primary-700 dark:hover:border-theme-primary-700 dark:focus-visible:outline-theme-primary-700;
     }
 
     .button-bordered {
@@ -19,7 +19,7 @@
     }
 
     .button-icon {
-        @apply inline-flex h-10 w-10 items-center justify-center rounded-full border border-theme-secondary-300 bg-white p-0;
+        @apply inline-flex h-10 w-10 items-center justify-center rounded-full border border-theme-secondary-300 bg-white p-0  dark:bg-transparent dark:text-theme-dark-200 dark:border-theme-dark-700 dark:hover:bg-theme-dark-700 dark:focus-visible:outline-theme-primary-700;
     }
 
     .button-icon-primary {
@@ -27,7 +27,7 @@
     }
 
     .button-icon-secondary {
-        @apply inline-flex h-10 w-10 items-center justify-center rounded-full bg-theme-secondary-100 p-0 text-theme-primary-900;
+        @apply inline-flex h-10 w-10 items-center justify-center rounded-full bg-theme-secondary-100 p-0 text-theme-primary-900 dark:bg-transparent dark:border-theme-dark-700 dark:text-theme-dark-300 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-200 dark:focus-within:border-theme-primary-700 dark:border;
     }
 
     .button-icon-danger {
@@ -40,7 +40,7 @@
 
     .button-secondary,
     .button-icon {
-        @apply transition-default inline-flex items-center text-theme-primary-900 outline-none outline-3 outline-offset-0 hover:bg-theme-secondary-300 focus-visible:outline-theme-primary-300 active:border-theme-secondary-400 active:bg-theme-secondary-400;
+        @apply transition-default inline-flex items-center text-theme-primary-900 outline-none outline-3 outline-offset-0 hover:bg-theme-secondary-300 focus-visible:outline-theme-primary-300 active:border-theme-secondary-400 active:bg-theme-secondary-400 dark:active:bg-transparent;
     }
 
     .button-primary[disabled],
@@ -54,7 +54,7 @@
     .button-icon-secondary[disabled],
     .button-icon-danger[disabled],
     .button-with-icon[disabled] {
-        @apply border-theme-secondary-100 bg-theme-secondary-100 text-theme-secondary-500;
+        @apply border-theme-secondary-100 bg-theme-secondary-100 text-theme-secondary-500 dark:bg-theme-dark-800 dark:text-theme-dark-400 dark:border-theme-dark-800;
     }
 
     .button-icon[disabled] {
