--- a/resources/css/_general.css
+++ b/resources/css/_general.css
@@ -14,6 +14,15 @@ body {
     .form-radio:checked:disabled {
         background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23B2B5CC' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
     }
+
+    .form-radio-dark:checked {
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23191D22' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
+    }
+
+    .form-radio-dark:checked:disabled {
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23CAD2D7' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
+    }
+
 }
 
 @layer utilities {
