--- a/resources/css/_buttons.css
+++ b/resources/css/_buttons.css
@@ -1,7 +1,7 @@
 @layer components {
     .button-primary,
     .button-icon-primary {
-        @apply transition-default inline-flex items-center rounded-3xl bg-theme-primary-600 px-5 py-2 font-medium text-white outline-none outline-3 outline-offset-0 hover:bg-theme-primary-700 focus-visible:bg-theme-primary-600 focus-visible:outline-theme-primary-300 active:bg-theme-primary-800 dark:border-theme-primary-600 dark:bg-theme-primary-600 dark:text-white dark:hover:border-theme-primary-700 dark:hover:bg-theme-primary-700 dark:focus-visible:outline-theme-primary-700 dark:active:bg-theme-dark-700 dark:active:text-white;
+        @apply transition-default inline-flex items-center rounded-3xl bg-theme-primary-600 px-5 py-2 font-medium text-white outline-none outline-3 outline-offset-0 hover:bg-theme-primary-700 focus-visible:bg-theme-primary-600 focus-visible:outline-theme-primary-300 active:bg-theme-primary-800 dark:border-theme-primary-600 dark:bg-theme-primary-600 dark:text-white dark:hover:border-theme-primary-700 dark:hover:bg-theme-primary-700 dark:focus-visible:outline-theme-primary-700  dark:active:text-white;
     }
 
     .button-bordered {
@@ -10,7 +10,7 @@
 
     .button-secondary,
     .button-icon-secondary {
-        @apply transition-default inline-flex items-center rounded-3xl bg-theme-secondary-100 px-5 py-2 font-medium outline-none outline-3 outline-offset-0 hover:bg-theme-secondary-300 focus-visible:bg-theme-secondary-300 focus-visible:outline-theme-primary-300 active:bg-theme-secondary-400 dark:bg-theme-dark-800 dark:text-theme-dark-200 dark:focus-within:border-2 dark:focus-within:border-theme-primary-700 dark:focus-within:bg-theme-dark-800 dark:focus-within:text-theme-dark-200 dark:active:bg-theme-dark-800 dark:active:text-theme-dark-100;
+        @apply transition-default transition-default inline-flex items-center rounded-3xl bg-theme-secondary-100 px-5 py-2 font-medium outline-none outline-3 outline-offset-0 hover:bg-theme-secondary-300 focus-visible:bg-theme-secondary-300 focus-visible:outline-theme-primary-300 active:bg-theme-secondary-400 dark:bg-theme-dark-800 dark:text-theme-dark-200 dark:focus-within:bg-theme-dark-800 dark:focus-within:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-200 dark:active:bg-theme-dark-800 dark:active:text-theme-dark-100;
     }
 
     .button-danger,
