--- a/resources/css/_general.css
+++ b/resources/css/_general.css
@@ -11,8 +11,24 @@ body {
         background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 16 16" fill="%23B2B5CC" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z"/%3E%3C/svg%3E');
     }
 
+    .form-checkbox-dark:checked {
+        background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 16 16" fill="%2323272D" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z"/%3E%3C/svg%3E');
+    }
+
+    .form-checkbox-dark:checked:disabled {
+        background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 16 16" fill="%23CAD2D7" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z"/%3E%3C/svg%3E');
+    }
+
     .form-radio:checked:disabled {
         background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23B2B5CC' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
+    }
+
+    .form-radio-dark:checked {
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23191D22' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
+    }
+
+    .form-radio-dark:checked:disabled {
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23CAD2D7' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
     }
 }
 
