--- a/resources/css/_skeletons.css
+++ b/resources/css/_skeletons.css
@@ -12,3 +12,11 @@
         rgb(var(--theme-color-secondary-200))
     );
 }
+.dark .react-loading-skeleton::after {
+    background-image: linear-gradient(
+        90deg,
+        rgb(var(--theme-color-dark-700)),
+        rgb(var(--theme-color-dark-800)),
+        rgb(var(--theme-color-dark-700))
+    );
+}
