--- a/resources/css/_gallery.css
+++ b/resources/css/_gallery.css
@@ -1,9 +1,5 @@
-.gallery-guest-banner {
-    background-image: url("../images/gallery/guest-banner-small.svg");
-}
-
-@media (min-width: 768px) {
+@layer components {
     .gallery-guest-banner {
-        background-image: url("../images/gallery/guest-banner.svg");
+        @apply bg-[url(../images/gallery/guest-banner-small.svg)] dark:bg-[url(../images/gallery/guest-banner-small-dark.svg)] md:bg-[url(../images/gallery/guest-banner.svg)] dark:md:bg-[url(../images/gallery/guest-banner-dark.svg)];
     }
 }
