--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -39,3 +39,7 @@
         0 207px 83px 0 rgba(33, 42, 131, 0.01),
         0 323px 90px 0 rgba(33, 42, 131, 0);
 }
+
+.latest-articles-carousel .swiper-pagination-bullets {
+    @apply bottom-0 flex justify-center;
+}
