--- a/resources/css/_buttons.css
+++ b/resources/css/_buttons.css
@@ -5,7 +5,7 @@
     }
 
     .button-bordered {
-        @apply transition-default inline-flex h-10 items-center rounded-3xl border border-theme-secondary-300 bg-white px-5 py-2 font-medium outline-none outline-3 outline-offset-0 hover:bg-theme-secondary-300 focus-visible:outline-theme-primary-300 active:border-theme-secondary-400 active:bg-theme-secondary-400;
+        @apply transition-default inline-flex h-10 items-center rounded-3xl border border-theme-secondary-300 bg-white px-5 py-2 font-medium outline-none outline-3 outline-offset-0 hover:bg-theme-secondary-300 focus-visible:outline-theme-primary-300 active:border-theme-secondary-400 active:bg-theme-secondary-400 dark:border-theme-dark-700 dark:bg-transparent;
     }
 
     .button-secondary,
@@ -82,20 +82,20 @@
     }
 
     .button-like:not([disabled]) {
-        @apply hover:border-theme-danger-100 hover:bg-theme-danger-100 hover:text-theme-danger-400 active:border-theme-danger-200 active:bg-theme-danger-200;
+        @apply hover:border-theme-danger-100 hover:bg-theme-danger-100 hover:text-theme-danger-400 active:border-theme-danger-200 active:bg-theme-danger-200 dark:hover:border-theme-dark-700 dark:hover:bg-theme-dark-700 dark:active:border-theme-dark-700 dark:active:stroke-theme-dark-200 dark:active:text-theme-dark-200 dark:active:ring-1 dark:active:ring-theme-primary-700;
     }
     .button-like:not(.button-like-selected) svg path {
-        @apply fill-transparent stroke-theme-primary-900;
+        @apply fill-transparent stroke-theme-primary-900 dark:stroke-theme-dark-300;
     }
     .button-like:not(.button-like-selected):not([disabled]):hover svg path {
         @apply stroke-theme-danger-400;
     }
 
     .button-like-selected {
-        @apply border-theme-danger-100 bg-theme-danger-50 text-theme-danger-400;
+        @apply border-theme-danger-100 bg-theme-danger-50 text-theme-danger-400 dark:border-theme-dark-800 dark:bg-theme-dark-800;
     }
     .button-like-selected svg path {
-        @apply fill-theme-danger-100 stroke-theme-danger-400;
+        @apply fill-theme-danger-100 stroke-theme-danger-400 dark:fill-theme-danger-400;
     }
 
     /* Save */
