--- a/resources/css/_article.css
+++ b/resources/css/_article.css
@@ -1,5 +1,6 @@
 @layer components {
     .article-wrapper {
-        @apply bg-[url(../images/articles/article-wrapper-bg.svg)] bg-cover bg-top bg-no-repeat dark:bg-[url(../images/articles/article-wrapper-bg-dark.svg)];
+        @apply bg-[url(../images/articles/article-wrapper-bg.svg)] bg-top bg-no-repeat dark:bg-[url(../images/articles/article-wrapper-bg-dark.svg)];
+        background-size: 1376px 500px;
     }
 }
