remove margin first element

--- a/resources/css/_article.css
+++ b/resources/css/_article.css
@@ -13,6 +13,10 @@
     @apply mb-0;
 }
 
+.article-content > :first-child {
+    @apply mt-0;
+}
+
 .article-content > p,
 .article-content > ul,
 .article-content > ol,
