--- a/resources/css/_article.css
+++ b/resources/css/_article.css
@@ -40,10 +40,13 @@
     @apply my-4;
 }
 
-.article-content > h1,
-.article-content > h2,
 .article-content > blockquote {
     @apply my-6;
+}
+
+.article-content > h1,
+.article-content > h2 {
+    @apply mb-[1.125rem] mt-6;
 }
 
 .article-content > h3,
