--- a/resources/css/_buttons.css
+++ b/resources/css/_buttons.css
@@ -23,7 +23,7 @@
     }
 
     .button-icon {
-        @apply inline-flex h-10 w-10 items-center justify-center rounded-full border border-theme-secondary-300 bg-white p-0  dark:border-theme-dark-700 dark:bg-transparent dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 dark:focus-visible:outline-theme-primary-700 dark:active:bg-transparent;
+        @apply inline-flex h-10 w-10 items-center justify-center rounded-full border border-theme-secondary-300 bg-white p-0 dark:border-theme-dark-700 dark:bg-transparent dark:text-theme-dark-300 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-200 dark:focus-visible:outline-theme-primary-700 dark:active:bg-transparent;
     }
 
     .button-icon-primary {
