--- a/resources/css/_tables.css
+++ b/resources/css/_tables.css
@@ -53,12 +53,12 @@
 
 .table-list thead tr th:first-child::before {
     content: "";
-    @apply pointer-events-none absolute left-0 top-0 z-10 -ml-3 block h-full w-3 rounded-l-xl bg-theme-secondary-50 dark:dark:bg-theme-dark-950;
+    @apply pointer-events-none absolute left-0 top-0 z-10 -ml-3 block h-full w-3 rounded-l-xl bg-theme-secondary-50 dark:bg-theme-dark-950;
 }
 
 .table-list thead tr th:last-child::after {
     content: "";
-    @apply pointer-events-none absolute right-0 top-0 z-10 -mr-3 block h-full w-3 rounded-r-xl bg-theme-secondary-50 dark:dark:bg-theme-dark-950;
+    @apply pointer-events-none absolute right-0 top-0 z-10 -mr-3 block h-full w-3 rounded-r-xl bg-theme-secondary-50 dark:bg-theme-dark-950;
 }
 
 .table-list tbody tr {
@@ -72,7 +72,7 @@
 
 .table-list tbody tr:hover::after {
     content: "";
-    @apply outline-theme-primary-100;
+    @apply outline-theme-primary-100 dark:outline-theme-dark-500;
 }
 
 .table-list tbody tr td:first-child::before {
