--- a/resources/css/_article.css
+++ b/resources/css/_article.css
@@ -186,3 +186,23 @@
 .article-content input[type="checkbox"]:checked{
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23191D22' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
 }
+
+.dark .article-content input[type="checkbox"]:checked{
+    background-image: url('data:image/svg+xml,%3Csvg viewBox="0 0 16 16" fill="%2323272D" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z"/%3E%3C/svg%3E');
+}
+
+.article-content thead {
+    @apply border-b-2 border-theme-secondary-300 dark:border-theme-dark-700;
+}
+
+.article-content thead tr th, .article-content tbody tr td {
+    @apply px-2;
+}
+
+.article-content tbody tr:nth-child(odd) {
+    @apply bg-theme-secondary-50 dark:bg-theme-dark-800;
+}
+
+.article-content tbody tr:nth-child(even) {
+    @apply bg-theme-secondary-100 dark:bg-theme-dark-900;
+}
