--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,3 +49,18 @@
 .dark .auth-overlay-shadow {
     box-shadow: 0px 15px 35px 0px rgba(18, 18, 19, 0.4);
 }
+
+.featured-collections-overlay {
+    background-image: linear-gradient(
+        180deg,
+        rgb(var(--theme-color-primary-50)) 47.38%,
+        transparent 216.53%
+    );
+}
+
+.dark .featured-collections-overlay {
+    background-image: linear-gradient(
+        181deg,
+        rgb(var(--theme-color-dark-800)) 41.03%,
+        transparent 208.87%);
+}
