--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,3 +64,19 @@
         rgb(var(--theme-color-dark-800)) 41.03%,
         transparent 208.87%);
 }
+
+@media (min-width: 960px) {
+    .featured-collections-overlay {
+        background-image: linear-gradient(
+            90deg,
+            rgb(var(--theme-color-primary-50)) 55.67%,
+            transparent 151.85%);
+    }
+
+    .dark .featured-collections-overlay {
+        background-image: linear-gradient(
+            90deg,
+            rgb(var(--theme-color-dark-800)) 55.67%,
+            transparent 151.85%);
+    }
+}
