--- a/resources/css/_article.css
+++ b/resources/css/_article.css
@@ -36,7 +36,8 @@
 .article-content > img,
 .article-content > figure,
 .article-content > pre,
-.article-content > code {
+.article-content > code,
+.article-content > iframe {
     @apply my-4;
 }
 
@@ -56,8 +57,13 @@
     @apply mb-3 mt-6;
 }
 
-.article-content img {
+.article-content img,
+.article-content iframe {
     @apply mx-auto rounded-lg;
+}
+
+.article-content iframe {
+    @apply aspect-video h-auto w-full;
 }
 
 .article-content h2,
