--- a/resources/css/_article.css
+++ b/resources/css/_article.css
@@ -37,8 +37,29 @@
 .article-content > figure,
 .article-content > pre,
 .article-content > code,
-.article-content > iframe {
+.article-content > iframe,
+.article-content > .twitter-embed-wrapper {
     @apply my-4;
+}
+
+.article-content > .twitter-embed-wrapper {
+    @apply flex justify-center;
+}
+
+.article-content > .twitter-embed-wrapper-dark {
+    @apply hidden;
+}
+
+.article-content > .twitter-embed-wrapper iframe {
+    @apply !max-w-full;
+}
+
+.dark .twitter-embed-wrapper {
+    @apply !hidden;
+}
+
+.dark .twitter-embed-wrapper.twitter-embed-wrapper-dark {
+    @apply !flex;
 }
 
 .article-content > blockquote {
