--- a/resources/css/_collection.css
+++ b/resources/css/_collection.css
@@ -5,3 +5,7 @@
 .dark .collection-banner {
     background-image: url("../images/collections/header-placeholder-dark.svg");
 }
+
+.shadow-collection-of-the-month {
+    box-shadow: 0px 15px 35px 0px rgba(33, 34, 37, 0.08);
+}
