--- a/resources/css/_collection.css
+++ b/resources/css/_collection.css
@@ -9,3 +9,7 @@
 .shadow-collection-of-the-month {
     box-shadow: 0px 15px 35px 0px rgba(33, 34, 37, 0.08);
 }
+
+.shadow-collection-of-the-month-footer {
+    box-shadow: 0px 15px 35px 0px rgba(18, 18, 19, 0.4);
+}
